# relayguard

./: .env.example  .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: quality.yml
backend/: pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema_created_relayguard_initial_schema.py  0002_replay_statuses.py  0003_webhook_intake_support.py  0004_routing_schedule.py  0005_delivery_execution.py  0006_replay_workflow.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  ai_helper.py  delivery_execution.py  events.py  health.py  integrations.py  replay_requests.py  routing.py  webhooks.py
backend/app/commands/: __init__.py  seed.py
backend/app/core/: config.py  correlation.py  logging.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/schemas/: ai_helper.py  delivery_execution.py  events.py  health.py  integrations.py  replay_requests.py  routing.py  webhooks.py
backend/app/services/: ai_helper.py  audit.py  dead_letters.py  deliveries.py  delivery_execution.py  destinations.py  events.py  integrations.py  replay_requests.py  retry_jobs.py  routing.py  webhook_intake.py
backend/tests/: test_ai_helper_integration.py  test_app.py  test_config.py  test_correlation.py  test_dashboard_support_integration.py  test_db_session.py  test_delivery_execution_integration.py  test_delivery_execution_schemas.py  test_integration_persistence.py  test_logging.py  test_replay_request_schemas.py  test_replay_requests_integration.py  test_routing_integration.py  test_routing_schemas.py  test_schema_metadata.py  test_seed.py  test_webhook_intake_integration.py  test_webhook_schemas.py
demo/: receiver.py
docs/: api-contract.md  architecture.md  decisions.md  project-status.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: app.smoke.test.tsx
frontend/src/components/: Dashboard.tsx  EventTester.tsx  GuidedDemo.tsx  MetricCard.tsx  States.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  types.ts
