[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relayguard-backend"
version = "0.1.0"
description = "RelayGuard backend foundation"
requires-python = ">=3.10,<3.14"
dependencies = [
  "fastapi>=0.116.1,<0.117.0",
  "uvicorn[standard]>=0.35.0,<0.36.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<0.29.0",
  "mypy>=1.17.0,<1.18.0",
  "pytest>=8.4.1,<9.0.0",
  "ruff>=0.12.5,<0.13.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true
show_error_codes = true
files = ["app", "tests"]
